Updated style for country detail images for maximum width. Fixed stretched images on xsmall screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ body {
 
 .country-detail img {
     width: 100%;
+    max-width: 300px;
     max-height: 200px;
 }
 
@@ -256,6 +257,7 @@ body {
         position: absolute;
         bottom: 0;
     }
+
 }
 
 nav.navbar {
